--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -1,9 +1,12 @@
-###Settings
+### Settings ------------------------------------------------------------------
  #Debuging einschalten [true/false] / default false / Ausgabe der Messwerte
   debug=true      
  
  #ioBroker-IP und Port der Simple-Restful-API [xxx.xxx.xxx.xxx:xxxxx]
-  IPP=192.168.1.2:8087               
+  IPP=192.168.1.30:8087               
+
+ #Port der Wetterstation
+  WS_PORT=80
  
  #wo sollen die Datenobjekte abgelegt werden
   PRE_DP=javascript.0.Wetterstation
@@ -29,7 +32,74 @@
   DP_ZEITSTEMPEL=${PRE_DP}.Zeitstempel
 
 ###  Ende Usereinstellungen  
+###  Farbdefinition
+      GR='\e[1;32m'
+      WE='\e[0m'
 ###-------------------------------------------------------------------------###
 ###  Subroutinen - KEINE ÄNDERUNGEN NÖTIG !  
 
+debuging() {
+  #Messwerteblock
+   echo -e "\n\nMesswerteblock: $GR${MESSWERTE[*]}$WE"
+
+  #Datenfelder ausgeben
+   echo -e "\n\nTemperatur Innen\t: $GR${MESSWERTE[0]}$WE °C"
+   echo -e "Temperatur Aussen\t: $GR${MESSWERTE[1]}$WE °C"
+   echo -e "Taupunkt\t\t: $GR${MESSWERTE[2]}$WE °C"
+   echo -e "Chill-Faktor\t\t: $GR${MESSWERTE[3]}$WE °C"
+   echo -e "Luftfeuchte Innen\t: $GR${MESSWERTE[4]}$WE %"
+   echo -e "Luftfeuchte Aussen\t: $GR${MESSWERTE[5]}$WE %"
+   echo -e "Windgeschwindkeit\t: $GR${MESSWERTE[6]}$WE km/h"
+   echo -e "max. Windgeschwindkeit\t: $GR${MESSWERTE[7]}$WE km/h"
+   echo -e "Windrichtung\t\t: $GR${MESSWERTE[8]}$WE °"
+   echo -e "Luftdruck absolut\t: $DRUCK_ABS hPa"
+   echo -e "Luftdruck relativ\t: $DRUCK_REL hPa"
+   echo -e "Regen aktuell\t\t: $REGEN_AKT mm"
+   echo -e "Regen Tag\t\t: $REGEN_TAG mm"
+   echo -e "Regen Woche\t\t: $REGEN_WOCHE mm"
+   echo -e "Regen Monat\t\t: $REGEN_MONAT mm"
+   echo -e "Sonnenstrahlung\t\t: $SONNE W/m²"
+   echo -e "UV-Index\t\t: $UV_INDEX"
+   echo -e "Zeitstempel\t\t: $ZEITSTEMPEL"
+   
+   echo -e "\n\nDatenstring für ioBroker:\n$GR$IOB_DATA$WE\n"
+
+  #Shell-Skript mit Fehler beenden
+    exit 1
+}
+
+### ioB-Daten senden
+iob_send() {
+   #build Data-String
+    IOB_DATA=$(cat <<-EOD
+	${DP_TEMP_INNEN}=${MESSWERTE[0]}
+	&${DP_TEMP_AUSSEN}=${MESSWERTE[1]}
+	&${DP_TAUPUNKT}=${MESSWERTE[2]}
+	&${DP_CHILL}=${MESSWERTE[3]}
+	&${DP_FEUCHTE_INNEN}=${MESSWERTE[4]}
+	&${DP_FEUCHTE_AUSSEN}=${MESSWERTE[5]}
+	&${DP_WIND}=${MESSWERTE[6]}
+	&${DP_WIND_MAX}=${MESSWERTE[7]}
+	&${DP_WIND_DIR}=${MESSWERTE[8]}
+	&prettyPrint
+	EOD
+     )
+   
+   #Leerzeichen entfernen
+    IOB_DATA=$(echo $IOB_DATA|tr -d " ")
+
+   #Daten an den ioB schicken
+    curl --data "$IOB_DATA" http://${IPP}/setBulk 
+}
+
+### Datenkonvertierungen
+convertFtoC() { 
+	MESSWERTE[$i]=`echo "scale=2;(${MESSWERTE[$i]}-32)*5/9" | bc -l`
+}
+
+convertMPHtoKMH() {
+	MESSWERTE[$i]=`echo "scale=2;(${MESSWERTE[$i]}*16094/10000)" | bc -l`
+}
+
+###EoF
 
