--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -52,8 +52,8 @@ debuging() {
    echo -e "Windgeschwindkeit\t: $GR${MESSWERTE[6]}$WE km/h"
    echo -e "max. Windgeschwindkeit\t: $GR${MESSWERTE[7]}$WE km/h"
    echo -e "Windrichtung\t\t: $GR${MESSWERTE[8]}$WE °"
-   echo -e "Luftdruck absolut\t: $DRUCK_ABS hPa"
-   echo -e "Luftdruck relativ\t: $DRUCK_REL hPa"
+   echo -e "Luftdruck absolut\t: $GR${MESSWERTE[9]}$WE hPa"
+   echo -e "Luftdruck relativ\t: $GR${MESSWERTE[10]}$WE hPa"
    echo -e "Regen aktuell\t\t: $REGEN_AKT mm"
    echo -e "Regen Tag\t\t: $REGEN_TAG mm"
    echo -e "Regen Woche\t\t: $REGEN_WOCHE mm"
@@ -81,6 +81,8 @@ iob_send() {
 	&${DP_WIND}=${MESSWERTE[6]}
 	&${DP_WIND_MAX}=${MESSWERTE[7]}
 	&${DP_WIND_DIR}=${MESSWERTE[8]}
+	&${DP_DRUCK_ABS}=${MESSWERTE[9]}
+	&${DP_DRUCK_REL}=${MESSWERTE[10]}
 	&prettyPrint
 	EOD
      )
@@ -101,5 +103,8 @@ convertMPHtoKMH() {
 	MESSWERTE[$i]=`echo "scale=2;(${MESSWERTE[$i]}*16094/10000)" | bc -l`
 }
 
+convertLuftdruck() {
+	MESSWERTE[$i]=`echo "scale=2;${MESSWERTE[$i]}*33864/1000" | bc -l`
+}
 ###EoF
 
