--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -1,12 +1,15 @@
-### Settings ------------------------------------------------------------------
+### Settings V0.1.0 -----------------------------------------------------------
  #Debuging einschalten [true/false] / default false / Ausgabe der Messwerte
-  debug=true      
+  debug=false
  
  #ioBroker-IP und Port der Simple-Restful-API [xxx.xxx.xxx.xxx:xxxxx]
-  IPP=192.168.1.30:8087               
+  IPP=192.168.1.3:8087               
 
  #Port der Wetterstation
   WS_PORT=80
+
+ #Pollintervall der Wetterstation in Sekunden (mindestens 10 Sekunden)
+  WS_POLL=60
  
  #wo sollen die Datenobjekte abgelegt werden
   PRE_DP=javascript.0.Wetterstation
@@ -34,13 +37,16 @@
 ###  Ende Usereinstellungen  
 ###  Farbdefinition
       GR='\e[1;32m'
-      WE='\e[0m'
+      GE='\e[1;33m'
+      WE='\e[1;37m'
+
 ###-------------------------------------------------------------------------###
-###  Subroutinen - KEINE ÄNDERUNGEN NÖTIG !  
+###  Subroutinen - KEINE ÄNDERUNGEN NÖTIG !                                 ###
+###-------------------------------------------------------------------------###
 
 debuging() {
   #Messwerteblock
-   echo -e "\n\nMesswerteblock: $GR${MESSWERTE[*]}$WE"
+   echo -e "\n\n${WE}Messwerteblock: $GR${MESSWERTE[*]}$WE"
 
   #Datenfelder ausgeben
    echo -e "\n\nTemperatur Innen\t: $GR${MESSWERTE[0]}$WE °C"
@@ -54,15 +60,18 @@ debuging() {
    echo -e "Windrichtung\t\t: $GR${MESSWERTE[8]}$WE °"
    echo -e "Luftdruck absolut\t: $GR${MESSWERTE[9]}$WE hPa"
    echo -e "Luftdruck relativ\t: $GR${MESSWERTE[10]}$WE hPa"
-   echo -e "Regen aktuell\t\t: $REGEN_AKT mm"
-   echo -e "Regen Tag\t\t: $REGEN_TAG mm"
-   echo -e "Regen Woche\t\t: $REGEN_WOCHE mm"
-   echo -e "Regen Monat\t\t: $REGEN_MONAT mm"
-   echo -e "Sonnenstrahlung\t\t: $SONNE W/m²"
-   echo -e "UV-Index\t\t: $UV_INDEX"
-   echo -e "Zeitstempel\t\t: $ZEITSTEMPEL"
+   echo -e "Regen aktuell\t\t: $GR${MESSWERTE[11]}$WE mm"
+   echo -e "Regen Tag\t\t: $GR${MESSWERTE[12]}$WE mm"
+   echo -e "Regen Woche\t\t: $GR${MESSWERTE[13]}$WE mm"
+   echo -e "Regen Monat\t\t: $GR${MESSWERTE[14]}$WE mm"
+   echo -e "Sonnenstrahlung\t\t: $GR${MESSWERTE[15]}$WE W/m²"
+   echo -e "UV-Index\t\t: $GR${MESSWERTE[16]}$WE"
+   echo -e "Zeitstempel\t\t: $GR${MESSWERTE[17]}$WE"
    
    echo -e "\n\nDatenstring für ioBroker:\n$GR$IOB_DATA$WE\n"
+
+   echo -e "\nDebug VAR:"
+   echo -e "IPP: $GE${IPP}$WE\tWS_PORT: $GE${WS_PORT}$WE\tWS_POLL: $GE${WS_POLL}$WE\tPRE_DP: $GE${PRE_DP}$WE\n"
 
   #Shell-Skript mit Fehler beenden
     exit 1
@@ -83,15 +92,26 @@ iob_send() {
 	&${DP_WIND_DIR}=${MESSWERTE[8]}
 	&${DP_DRUCK_ABS}=${MESSWERTE[9]}
 	&${DP_DRUCK_REL}=${MESSWERTE[10]}
-	&prettyPrint
+	&${DP_REGEN_AKT}=${MESSWERTE[11]}
+	&${DP_REGEN_TAG}=${MESSWERTE[12]}
+	&${DP_REGEN_WOCHE}=${MESSWERTE[13]}
+	&${DP_REGEN_MONAT}=${MESSWERTE[14]}
+	&${DP_SONNE}=${MESSWERTE[15]}
+	&${DP_UV_INDEX}=${MESSWERTE[16]}
 	EOD
      )
    
-   #Leerzeichen entfernen
+   #Leerzeichen entfernen + Zeitstempel wg. Leerzeichen erst hier anhängen
     IOB_DATA=$(echo $IOB_DATA|tr -d " ")
+    IOB_DATA=${IOB_DATA}\&${DP_ZEITSTEMPEL}=${MESSWERTE[17]}
+
 
    #Daten an den ioB schicken
-    curl --data "$IOB_DATA" http://${IPP}/setBulk 
+    if [ $debug == "true" ]; then 
+	curl --data "$IOB_DATA&prettyPrint" http://${IPP}/setBulk
+      else
+	curl --data "$IOB_DATA" http://${IPP}/setBulk >/dev/null 2>&1
+    fi
 }
 
 ### Datenkonvertierungen
@@ -106,5 +126,13 @@ convertMPHtoKMH() {
 convertLuftdruck() {
 	MESSWERTE[$i]=`echo "scale=2;${MESSWERTE[$i]}*33864/1000" | bc -l`
 }
-###EoF
 
+convertInchtoMM() { 
+	MESSWERTE[$i]=`echo "scale=1;${MESSWERTE[$i]}*254/10" | bc -l`
+}
+
+convertTime() {
+	MESSWERTE[$i]=$(echo ${MESSWERTE[$i]}|awk -F'-|%20' '{printf "%02s.%02s.%s %s", $3, $2, $1, $4}')
+}
+
+###EoF
