--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -71,7 +71,8 @@ debuging() {
    echo -e "\n\nDatenstring für ioBroker:\n$GR$IOB_DATA$WE\n"
 
    echo -e "\nDebug VAR:"
-   echo -e "IPP: $GE${IPP}$WE\tWS_PORT: $GE${WS_PORT}$WE\tWS_POLL: $GE${WS_POLL}$WE\tPRE_DP: $GE${PRE_DP}$WE\n"
+   echo -e "IPP: $GE${IPP}$WE\tWS_PORT: $GE${WS_PORT}$WE\tWS_POLL: $GE${WS_POLL}$WE\tPRE_DP: $GE${PRE_DP}$WE"
+   echo -e "Installationsverzeichnis: $GE$DIR$WE"
 
   #Shell-Skript mit Fehler beenden
     exit 1
