--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -1,4 +1,4 @@
-### Settings V0.1.0 -----------------------------------------------------------
+### Settings V0.1.1 -----------------------------------------------------------
  #Debuging einschalten [true/false] / default false / Ausgabe der Messwerte
   debug=false
  
@@ -8,7 +8,7 @@
  #Port der Wetterstation
   WS_PORT=80
 
- #Pollintervall der Wetterstation in Sekunden (mindestens 10 Sekunden)
+ #Pollintervall der Wetterstation in Sekunden (min 10 Sekunden)
   WS_POLL=60
  
  #wo sollen die Datenobjekte abgelegt werden
@@ -39,6 +39,8 @@
       GR='\e[1;32m'
       GE='\e[1;33m'
       WE='\e[1;37m'
+      BL='\e[1;36m'
+      RE='\e[1;31m'
 
 ###-------------------------------------------------------------------------###
 ###  Subroutinen - KEINE ÄNDERUNGEN NÖTIG !                                 ###
@@ -46,7 +48,7 @@
 
 debuging() {
   #Messwerteblock
-   echo -e "\n\n${WE}Messwerteblock: $GR${MESSWERTE[*]}$WE"
+   echo -e "\n\n${WE}Messwerteblock: $GR${MESSWERTERAW[*]}$WE"
 
   #Datenfelder ausgeben
    echo -e "\n\nTemperatur Innen\t: $GR${MESSWERTE[0]}$WE °C"
@@ -71,8 +73,9 @@ debuging() {
    echo -e "\n\nDatenstring für ioBroker:\n$GR$IOB_DATA$WE\n"
 
    echo -e "\nDebug VAR:"
-   echo -e "IPP: $GE${IPP}$WE\tWS_PORT: $GE${WS_PORT}$WE\tWS_POLL: $GE${WS_POLL}$WE\tPRE_DP: $GE${PRE_DP}$WE"
    echo -e "Installationsverzeichnis: $GE$DIR$WE"
+   echo -e "IPP: $GE${IPP}$WE\tWS_PORT: $GE${WS_PORT}$WE\t\tWS_POLL: $GE${WS_POLL}$WE\tPRE_DP: $GE${PRE_DP}$WE"
+   echo -e "Script-Version: $GE$SH_VER$WE\tConfig-Version: $GE${CONF_V}$WE"
 
   #Shell-Skript mit Fehler beenden
     exit 1
@@ -115,6 +118,7 @@ iob_send() {
     fi
 }
 
+
 ### Datenkonvertierungen
 convertFtoC() { 
 	MESSWERTE[$i]=`echo "scale=2;(${MESSWERTE[$i]}-32)*5/9" | bc -l`
@@ -133,7 +137,23 @@ convertInchtoMM() {
 }
 
 convertTime() {
-	MESSWERTE[$i]=$(echo ${MESSWERTE[$i]}|awk -F'-|%20' '{printf "%02s.%02s.%s %s", $3, $2, $1, $4}')
+        MESSWERTE[$i]=$(echo ${MESSWERTE[$i]}|sed -e 's/%20/ /')
+        MESSWERTE[$i]=$(date --date="${MESSWERTE[$i]} UTC" +'%d.%m.%Y %H:%M:%S')
+	#MESSWERTE[$i]=$(echo ${MESSWERTE[$i]}|awk -F'-|%20' '{printf "%02s.%02s.%s %s", $3, $2, $1, $4}')
+}
+
+
+
+###Befehlszeilenparameter
+usage() {
+	echo "usage: wetterstation [[--debug] | [-v] | [-h]"
+	echo " --debug    einmaliger Testdurchlauf mit Ausgabe"
+	echo " -v         Ausgabe der Versionsnummer"
+	echo " -h         dieses Hilfemenue"
+}
+
+version() {
+	echo -e "$BL ${SH_VER} - (c) 2019-2020 SBorg"
 }
 
 ###EoF
