--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -1,4 +1,4 @@
-### Settings V0.1.1 -----------------------------------------------------------
+### Settings V0.1.2 -----------------------------------------------------------
  #Debuging einschalten [true/false] / default false / Ausgabe der Messwerte
   debug=false
  
@@ -11,6 +11,9 @@
  #Pollintervall der Wetterstation in Sekunden (min 30 Sekunden)
   WS_POLL=60
  
+ #Name/ID der Wetterstation
+  WS_ID=ZuHause
+  
  #wo sollen die Datenobjekte abgelegt werden
   PRE_DP=javascript.0.Wetterstation
 
