support for new datapoint weather_year, without switch for older stations

--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -1,18 +1,18 @@
-### Settings V0.1.2 -----------------------------------------------------------
+### Settings V0.1.3 -----------------------------------------------------------
  #Debuging einschalten [true/false] / default false / Ausgabe der Messwerte
   debug=false
  
  #ioBroker-IP und Port der Simple-Restful-API [xxx.xxx.xxx.xxx:xxxxx]
-  IPP=192.168.1.3:8087               
+  IPP=192.168.0.221:8087               
 
  #Port der Wetterstation
-  WS_PORT=80
+  WS_PORT=9999
 
  #Pollintervall der Wetterstation in Sekunden (min 30 Sekunden)
   WS_POLL=60
 
  #Name/ID der Wetterstation
-  WS_ID=ZuHause
+  WS_ID=1
  
  #wo sollen die Datenobjekte abgelegt werden
   PRE_DP=javascript.0.Wetterstation
@@ -33,6 +33,7 @@
   DP_REGEN_TAG=${PRE_DP}.Regen_Tag
   DP_REGEN_WOCHE=${PRE_DP}.Regen_Woche
   DP_REGEN_MONAT=${PRE_DP}.Regen_Monat
+  DP_REGEN_JAHR=${PRE_DP}.Regen_Jahr
   DP_SONNE=${PRE_DP}.Sonnenstrahlung
   DP_UV_INDEX=${PRE_DP}.UV_Index
   DP_ZEITSTEMPEL=${PRE_DP}.Zeitstempel
@@ -70,9 +71,10 @@ debuging() {
    echo -e "Regen Tag\t\t: $GR${MESSWERTE[12]}$WE mm"
    echo -e "Regen Woche\t\t: $GR${MESSWERTE[13]}$WE mm"
    echo -e "Regen Monat\t\t: $GR${MESSWERTE[14]}$WE mm"
-   echo -e "Sonnenstrahlung\t\t: $GR${MESSWERTE[15]}$WE W/m²"
-   echo -e "UV-Index\t\t: $GR${MESSWERTE[16]}$WE"
-   echo -e "Zeitstempel\t\t: $GR${MESSWERTE[17]}$WE"
+   echo -e "Regen Jahr\t\t: $GR${MESSWERTE[15]}$WE mm"
+   echo -e "Sonnenstrahlung\t\t: $GR${MESSWERTE[16]}$WE W/m²"
+   echo -e "UV-Index\t\t: $GR${MESSWERTE[17]}$WE"
+   echo -e "Zeitstempel\t\t: $GR${MESSWERTE[18]}$WE"
    
    echo -e "\n\nDatenstring für ioBroker:\n$GR$IOB_DATA$WE\n"
 
@@ -106,14 +108,15 @@ iob_send() {
 	&${DP_REGEN_TAG}=${MESSWERTE[12]}
 	&${DP_REGEN_WOCHE}=${MESSWERTE[13]}
 	&${DP_REGEN_MONAT}=${MESSWERTE[14]}
-	&${DP_SONNE}=${MESSWERTE[15]}
-	&${DP_UV_INDEX}=${MESSWERTE[16]}
+        &${DP_REGEN_JAHR}=${MESSWERTE[15]}
+	&${DP_SONNE}=${MESSWERTE[16]}
+	&${DP_UV_INDEX}=${MESSWERTE[17]}
 	EOD
      )
    
    #Leerzeichen entfernen + Zeitstempel wg. Leerzeichen erst hier anhängen
     IOB_DATA=$(echo $IOB_DATA|tr -d " ")
-    IOB_DATA=${IOB_DATA}\&${DP_ZEITSTEMPEL}=${MESSWERTE[17]}
+    IOB_DATA=${IOB_DATA}\&${DP_ZEITSTEMPEL}=${MESSWERTE[18]}
 
 
    #Daten an den ioB schicken
