--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -3,16 +3,16 @@
   debug=false
  
  #ioBroker-IP und Port der Simple-Restful-API [xxx.xxx.xxx.xxx:xxxxx]
-  IPP=192.168.0.221:8087               
+  IPP=192.168.1.3:8087               
 
  #Port der Wetterstation
-  WS_PORT=9999
+  WS_PORT=80
 
  #Pollintervall der Wetterstation in Sekunden (min 30 Sekunden)
   WS_POLL=60
 
  #Name/ID der Wetterstation
-  WS_ID=1
+  WS_ID=ZuHause
  
  #wo sollen die Datenobjekte abgelegt werden
   PRE_DP=javascript.0.Wetterstation
