--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -77,8 +77,8 @@ debuging() {
    echo -e "Zeitstempel\t\t: $GR${MESSWERTE[18]}$WE"
    
    echo -e "\n\nDatenstring für ioBroker:\n$GR$IOB_DATA$WE\n"
-
-   echo -e "\nDATA von Wetterstation(Passwort auskommentieren!):\n$GR${DAT}$WE\n"
+   DAT=$(echo $DATA| sed -e 's/PASSWORD=.*[^&]*&indoort/PASSWORD=*****\&indoort/; s/\?ID=.*[^&]*&PASS/\?ID=*****\&PASS/') 
+   echo -e "\nDATA von Wetterstation:\n$GR${DAT}$WE\n"
 
    echo -e "\nDebug VAR:"
    echo -e "Installationsverzeichnis: $GE$DIR$WE"
@@ -135,8 +135,10 @@ function get_DATA(){
    DATA=$(timeout 10 nc -lv -p ${WS_PORT}|sed '3 p')
    STRLEN=$(echo -n $DATA | wc -m)
 
+  #haben wir eine Jahresregenmenge?
+   if [[ ! "$DATA" =~ "yearlyrainin" ]]; then DATA=$(echo $DATA| sed -e 's/solarradiation/yearlyrainin=0\&solarradiation/' ); fi
   #check auf Datenintigrität
-   if [ "$STRLEN" -gt "400" ] && [[ "$DATA" =~ "/weatherstation/updateweatherstation.php?ID=${WS_ID}" ]] ; then return 0; else return 1; fi
+   if [ "$STRLEN" -gt "400" ] && [[ "$DATA" =~ "/weatherstation/updateweatherstation.php?ID=${WS_ID}" ]]; then return 0; else return 1; fi
 }
 
 
@@ -159,8 +161,8 @@ convertInchtoMM() {
 }
 
 convertTime() {
-       	MESSWERTE[$i]=$(echo ${MESSWERTE[$i]}|sed -e 's/%20/ /')
-    	MESSWERTE[$i]=$(date --date="${MESSWERTE[$i]} UTC" +'%d.%m.%Y %H:%M:%S')
+	MESSWERTE[$i]=$(echo ${MESSWERTE[$i]}|sed -e 's/%20/ /')
+	MESSWERTE[$i]=$(date --date="${MESSWERTE[$i]} UTC" +'%d.%m.%Y %H:%M:%S')
 	#MESSWERTE[$i]=$(echo ${MESSWERTE[$i]}|awk -F'-|%20' '{printf "%02s.%02s.%s %s", $3, $2, $1, $4}')
 }
 
