--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -77,7 +77,11 @@ debuging() {
    echo -e "Zeitstempel\t\t: $GR${MESSWERTE[18]}$WE"
    
    echo -e "\n\nDatenstring für ioBroker:\n$GR$IOB_DATA$WE\n"
-   DAT=$(echo $DATA| sed -e 's/PASSWORD=.*[^&]*&indoort/PASSWORD=*****\&indoort/; s/\?ID=.*[^&]*&PASS/\?ID=*****\&PASS/') 
+   if [ "$show_pwid" = "true" ]; then
+      DAT=$DATA
+    else
+      DAT=$(echo $DATA| sed -e 's/PASSWORD=.*[^&]*&indoort/PASSWORD=*****\&indoort/; s/\?ID=.*[^&]*&PASS/\?ID=*****\&PASS/') 
+   fi
    echo -e "\nDATA von Wetterstation:\n$GR${DAT}$WE\n"
 
    echo -e "\nDebug VAR:"
@@ -170,8 +174,9 @@ convertTime() {
 
 ###Befehlszeilenparameter
 usage() {
-	echo "usage: wetterstation [[--debug] | [-v] | [-h]"
+	echo "usage: wetterstation [[--debug] | [-s] | [-v] | [-h]"
 	echo " --debug    einmaliger Testdurchlauf mit Ausgabe"
+	echo " -s         zeigt bei der Debug-Ausgabe Passwort und Station-ID im Klartext an"
 	echo " -v         Ausgabe der Versionsnummer"
 	echo " -h         dieses Hilfemenue"
 }
