--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -134,7 +134,7 @@ iob_send() {
 
 
 ### Daten holen und Integritätscheck
-function get_DATA(){
+function get_DATA() {
   #auf Daten der Wetterstation warten
    DATA=$(timeout 10 nc -lv -p ${WS_PORT}|sed '3 p')
    STRLEN=$(echo -n $DATA | wc -m)
@@ -143,6 +143,13 @@ function get_DATA(){
    if [[ ! "$DATA" =~ "yearlyrainin" ]]; then DATA=$(echo $DATA| sed -e 's/solarradiation/yearlyrainin=0\&solarradiation/' ); fi
   #check auf Datenintigrität
    if [ "$STRLEN" -gt "400" ] && [[ "$DATA" =~ "/weatherstation/updateweatherstation.php?ID=${WS_ID}" ]]; then return 0; else return 1; fi
+}
+
+
+
+### Datenpaket der Wetterstation anzeigen
+ws_data() {
+   echo -e "\n\nWarte maximal ${WS_POLL} Sekunden auf Datenpaket der Wetterstation...\n" && timeout ${WS_POLL} nc -lv -p ${WS_PORT}
 }
 
 
@@ -174,15 +181,17 @@ convertTime() {
 
 ###Befehlszeilenparameter
 usage() {
-	echo "usage: wetterstation [[--debug] | [-s] | [-v] | [-h]"
-	echo " --debug    einmaliger Testdurchlauf mit Ausgabe"
-	echo " -s         zeigt bei der Debug-Ausgabe Passwort und Station-ID im Klartext an"
-	echo " -v         Ausgabe der Versionsnummer"
-	echo " -h         dieses Hilfemenue"
+	echo -e "\nusage: wetterstation [[--debug] | [-s|--show] | [-d|--data] | [-v|--version] | [-h|--help]"
+	echo -e " --debug		einmaliger Testdurchlauf mit Ausgabe"
+	echo -e " -s | --show	zeigt bei der Debug-Ausgabe Passwort und Station-ID im Klartext an"
+	echo -e " -d | --data	zeigt nur das gesendete Datenpaket der Wetterstation an"
+	echo -e " -v | --version	Ausgabe der Versionsnummer"
+	echo -e " -h | --help	dieses Hilfemenue\n"
 }
 
 version() {
-	echo -e "$BL ${SH_VER} - (c) 2019-2020 SBorg"
+	echo -e "\n$BL ${SH_VER} - (c) 2019-2020 SBorg"
+	echo -e " Config-Version: ${CONF_V}\n"
 }
 
 ###EoF
