--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -181,11 +181,11 @@ convertTime() {
 
 ###Befehlszeilenparameter
 usage() {
-	echo -e "\nusage: wetterstation [[--debug] | [-s|--show] | [-d|--data] | [-v|--version] | [-h|--help]"
-	echo -e " --debug		einmaliger Testdurchlauf mit Ausgabe"
+	echo -e "\nusage: wetterstation [[--debug] | [-s|--show] | [-d|--data] | [-v|--version] | [-h|--help]\n"
+	echo -e " --debug	einmaliger Testdurchlauf mit Ausgabe"
 	echo -e " -s | --show	zeigt bei der Debug-Ausgabe Passwort und Station-ID im Klartext an"
 	echo -e " -d | --data	zeigt nur das gesendete Datenpaket der Wetterstation an"
-	echo -e " -v | --version	Ausgabe der Versionsnummer"
+	echo -e " -v | --version\tAusgabe der Versionsnummer"
 	echo -e " -h | --help	dieses Hilfemenue\n"
 }
 
