--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -1,4 +1,4 @@
-### Settings V0.1.3 -----------------------------------------------------------
+### Settings V0.1.4 -----------------------------------------------------------
  #Debuging einschalten [true/false] / default false / Ausgabe der Messwerte
   debug=false
  
@@ -34,6 +34,7 @@
   DP_REGEN_WOCHE=${PRE_DP}.Regen_Woche
   DP_REGEN_MONAT=${PRE_DP}.Regen_Monat
   DP_REGEN_JAHR=${PRE_DP}.Regen_Jahr
+  DP_REGEN_JAHR_KUM=${PRE_DP}.Regen_Jahr_kummuliert
   DP_SONNE=${PRE_DP}.Sonnenstrahlung
   DP_UV_INDEX=${PRE_DP}.UV_Index
   DP_ZEITSTEMPEL=${PRE_DP}.Zeitstempel
@@ -179,14 +180,28 @@ convertTime() {
 
 
 
+###Jahresregenmenge
+rain() {
+	UTC=$(echo ${MESSWERTERAW[18]}|awk -F'%20|:' '{printf "%s:%s", $2, $3}')
+	if [ $UTC == "23:58" ] || [ $UTC == "23:59" ]; then
+	   REGENMENGE=$(curl -s http://${IPP}/getPlainValue/${DP_REGEN_JAHR_KUM})
+	   REGENMENGE=$(echo "scale=2;$REGENMENGE+${MESSWERTE[12]}" | bc -l)
+	   curl http://${IPP}/set/${DP_REGEN_JAHR_KUM}?value="${REGENMENGE}" >/dev/null 2>&1
+	fi
+	exit
+}
+
+
+
 ###Befehlszeilenparameter
 usage() {
-	echo -e "\nusage: wetterstation [[--debug] | [-s|--show] | [-d|--data] | [-v|--version] | [-h|--help]\n"
-	echo -e " --debug	einmaliger Testdurchlauf mit Ausgabe"
-	echo -e " -s | --show	zeigt bei der Debug-Ausgabe Passwort und Station-ID im Klartext an"
-	echo -e " -d | --data	zeigt nur das gesendete Datenpaket der Wetterstation an"
+	echo -e "\nusage: wetterstation [[--debug] | [--rain] | [-s|--show] | [-d|--data] | [-v|--version] | [-h|--help]]\n"
+	echo -e " --debug\teinmaliger Testdurchlauf mit Ausgabe"
+    echo -e " --rain\t\tBerechnung der Jahresregenmenge"
+	echo -e " -s | --show\tzeigt bei der Debug-Ausgabe Passwort und Station-ID im Klartext an"
+	echo -e " -d | --data\tzeigt nur das gesendete Datenpaket der Wetterstation an"
 	echo -e " -v | --version\tAusgabe der Versionsnummer"
-	echo -e " -h | --help	dieses Hilfemenue\n"
+	echo -e " -h | --help\tdieses Hilfemenue\n"
 }
 
 version() {
