--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -8,8 +8,8 @@
  #Port der Wetterstation
   WS_PORT=80
 
- #Pollintervall der Wetterstation in Sekunden (min 30 Sekunden)
-  WS_POLL=60
+ #Pollintervall der Wetterstation in Sekunden (min 16 Sekunden)
+  WS_POLL=16
 
  #Name/ID der Wetterstation
   WS_ID=ZuHause
@@ -34,7 +34,7 @@
   DP_REGEN_WOCHE=${PRE_DP}.Regen_Woche
   DP_REGEN_MONAT=${PRE_DP}.Regen_Monat
   DP_REGEN_JAHR=${PRE_DP}.Regen_Jahr
-  DP_REGEN_JAHR_KUM=${PRE_DP}.Regen_Jahr_kummuliert
+  DP_REGEN_JAHR_KUM=${PRE_DP}.Regen_Jahr_kumuliert
   DP_SONNE=${PRE_DP}.Sonnenstrahlung
   DP_UV_INDEX=${PRE_DP}.UV_Index
   DP_ZEITSTEMPEL=${PRE_DP}.Zeitstempel
@@ -137,7 +137,7 @@ iob_send() {
 ### Daten holen und Integritätscheck
 function get_DATA() {
   #auf Daten der Wetterstation warten
-   DATA=$(timeout 10 nc -lv -p ${WS_PORT}|sed '3 p')
+   DATA=$(timeout ${WARTE} nc -lv -p ${WS_PORT}|sed '3 p')
    STRLEN=$(echo -n $DATA | wc -m)
 
   #haben wir eine Jahresregenmenge?
@@ -150,7 +150,7 @@ function get_DATA() {
 
 ### Datenpaket der Wetterstation anzeigen
 ws_data() {
-   echo -e "\n\nWarte maximal ${WS_POLL} Sekunden auf Datenpaket der Wetterstation...\n" && timeout ${WS_POLL} nc -lv -p ${WS_PORT}
+   echo -e "\n\nWarte maximal ${WARTE} Sekunden auf Datenpaket der Wetterstation...\n" && timeout ${WARTE} nc -lv -p ${WS_PORT}
 }
 
 
@@ -184,20 +184,25 @@ convertTime() {
 rain() {
 	UTC=$(echo ${MESSWERTERAW[18]}|awk -F'%20|:' '{printf "%s:%s", $2, $3}')
 	if [ $UTC == "23:58" ] || [ $UTC == "23:59" ]; then
+	   LC=$(curl -s http://${IPP}/get/${DP_REGEN_JAHR_KUM}?prettyPrint | grep '"lc":' | tr -d [:alpha:]:\ ,\")
+	   LC=`echo "scale=0;${LC}/1000" | bc -l`
+	   TS_AKT=$(date +%s)
+	   TS_DIFF=`echo "${TS_AKT}-${LC}-3600" | bc` #mind. 1 Stunde Differenz
+
+	  if [ ${TS_DIFF} -ge "0" ]; then
 	   REGENMENGE=$(curl -s http://${IPP}/getPlainValue/${DP_REGEN_JAHR_KUM})
 	   REGENMENGE=$(echo "scale=2;$REGENMENGE+${MESSWERTE[12]}" | bc -l)
 	   curl http://${IPP}/set/${DP_REGEN_JAHR_KUM}?value="${REGENMENGE}" >/dev/null 2>&1
+	  fi
 	fi
-	exit
 }
 
 
 
 ###Befehlszeilenparameter
 usage() {
-	echo -e "\nusage: wetterstation [[--debug] | [--rain] | [-s|--show] | [-d|--data] | [-v|--version] | [-h|--help]]\n"
+	echo -e "\nusage: wetterstation [[--debug] | [-s|--show] | [-d|--data] | [-v|--version] | [-h|--help]]\n"
 	echo -e " --debug\teinmaliger Testdurchlauf mit Ausgabe"
-    echo -e " --rain\t\tBerechnung der Jahresregenmenge"
 	echo -e " -s | --show\tzeigt bei der Debug-Ausgabe Passwort und Station-ID im Klartext an"
 	echo -e " -d | --data\tzeigt nur das gesendete Datenpaket der Wetterstation an"
 	echo -e " -v | --version\tAusgabe der Versionsnummer"
