--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -9,7 +9,7 @@
   WS_PORT=80
 
  #Pollintervall der Wetterstation in Sekunden (min 16 Sekunden)
-  WS_POLL=16
+  WS_POLL=60
 
  #Name/ID der Wetterstation
   WS_ID=ZuHause
@@ -27,6 +27,7 @@
   DP_WIND=${PRE_DP}.Wind
   DP_WIND_MAX=${PRE_DP}.Wind_max
   DP_WIND_DIR=${PRE_DP}.Windrichtung
+  DP_WIND_DIR_TXT=${PRE_DP}.Windrichtung_Text
   DP_DRUCK_ABS=${PRE_DP}.Druck_absolut
   DP_DRUCK_REL=${PRE_DP}.Druck_relativ
   DP_REGEN_AKT=${PRE_DP}.Regen_aktuell
@@ -66,6 +67,7 @@ debuging() {
    echo -e "Windgeschwindkeit\t: $GR${MESSWERTE[6]}$WE km/h"
    echo -e "max. Windgeschwindkeit\t: $GR${MESSWERTE[7]}$WE km/h"
    echo -e "Windrichtung\t\t: $GR${MESSWERTE[8]}$WE °"
+   echo -e "Windrichtung\t\t: $GR${WINDRICHTUNG}$WE"
    echo -e "Luftdruck absolut\t: $GR${MESSWERTE[9]}$WE hPa"
    echo -e "Luftdruck relativ\t: $GR${MESSWERTE[10]}$WE hPa"
    echo -e "Regen aktuell\t\t: $GR${MESSWERTE[11]}$WE mm"
@@ -107,6 +109,7 @@ iob_send() {
 	&${DP_WIND}=${MESSWERTE[6]}
 	&${DP_WIND_MAX}=${MESSWERTE[7]}
 	&${DP_WIND_DIR}=${MESSWERTE[8]}
+	&${DP_WIND_DIR_TXT}=${WINDRICHTUNG}
 	&${DP_DRUCK_ABS}=${MESSWERTE[9]}
 	&${DP_DRUCK_REL}=${MESSWERTE[10]}
 	&${DP_REGEN_AKT}=${MESSWERTE[11]}
@@ -198,6 +201,30 @@ rain() {
 }
 
 
+
+###Windrichtung
+winddir() {
+   WINDRICHTUNG=${WINDDIRS[$(round ${MESSWERTE[8]}/22.5 0)]}
+}
+
+
+###Hilfsfunktionen
+round() {
+    bc -l <<END_BC
+        define round(number,r_scale)
+        {
+            auto o_scale
+            o_scale = scale
+            scale = r_scale+1
+            number += 5 / (10 ^ scale)
+            scale = r_scale
+            number /= 1
+            scale = o_scale
+            return number
+        }
+        round ($1,$2)
+END_BC
+}
 
 ###Befehlszeilenparameter
 usage() {
