--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -8,7 +8,7 @@
  #Port der Wetterstation
   WS_PORT=80
 
- #Pollintervall der Wetterstation in Sekunden (min 16 Sekunden)
+ #Pollintervall der Wetterstation in Sekunden (minimal 16 Sekunden)
   WS_POLL=60
 
  #Name/ID der Wetterstation
@@ -30,7 +30,7 @@
   DP_WIND_DIR_TXT=${PRE_DP}.Windrichtung_Text
   DP_DRUCK_ABS=${PRE_DP}.Druck_absolut
   DP_DRUCK_REL=${PRE_DP}.Druck_relativ
-  DP_REGEN_AKT=${PRE_DP}.Regen_aktuell
+  DP_REGENRATE=${PRE_DP}.Regenrate
   DP_REGEN_TAG=${PRE_DP}.Regen_Tag
   DP_REGEN_WOCHE=${PRE_DP}.Regen_Woche
   DP_REGEN_MONAT=${PRE_DP}.Regen_Monat
@@ -70,7 +70,7 @@ debuging() {
    echo -e "Windrichtung\t\t: $GR${WINDRICHTUNG}$WE"
    echo -e "Luftdruck absolut\t: $GR${MESSWERTE[9]}$WE hPa"
    echo -e "Luftdruck relativ\t: $GR${MESSWERTE[10]}$WE hPa"
-   echo -e "Regen aktuell\t\t: $GR${MESSWERTE[11]}$WE mm"
+   echo -e "Regenrate\t\t: $GR${MESSWERTE[11]}$WE mm/h"
    echo -e "Regen Tag\t\t: $GR${MESSWERTE[12]}$WE mm"
    echo -e "Regen Woche\t\t: $GR${MESSWERTE[13]}$WE mm"
    echo -e "Regen Monat\t\t: $GR${MESSWERTE[14]}$WE mm"
@@ -112,7 +112,7 @@ iob_send() {
 	&${DP_WIND_DIR_TXT}=${WINDRICHTUNG}
 	&${DP_DRUCK_ABS}=${MESSWERTE[9]}
 	&${DP_DRUCK_REL}=${MESSWERTE[10]}
-	&${DP_REGEN_AKT}=${MESSWERTE[11]}
+	&${DP_REGENRATE}=${MESSWERTE[11]}
 	&${DP_REGEN_TAG}=${MESSWERTE[12]}
 	&${DP_REGEN_WOCHE}=${MESSWERTE[13]}
 	&${DP_REGEN_MONAT}=${MESSWERTE[14]}
