--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -1,4 +1,4 @@
-### Settings V1.0.0 -----------------------------------------------------------
+### Settings V1.0.1 -----------------------------------------------------------
  #Debuging einschalten [true/false] / default false / Ausgabe der Messwerte
   debug=false
  
@@ -9,7 +9,7 @@
   WS_PORT=80
 
  #Pollintervall der Wetterstation in Sekunden (minimal 16 Sekunden)
-  WS_POLL=16
+  WS_POLL=60
 
  #Name/ID der Wetterstation
   WS_ID=ZuHause
@@ -31,6 +31,7 @@
   DP_DRUCK_ABS=${PRE_DP}.Druck_absolut
   DP_DRUCK_REL=${PRE_DP}.Druck_relativ
   DP_REGENRATE=${PRE_DP}.Regenrate
+  DP_REGENSTATUS=${PRE_DP}.Regenstatus
   DP_REGEN_TAG=${PRE_DP}.Regen_Tag
   DP_REGEN_WOCHE=${PRE_DP}.Regen_Woche
   DP_REGEN_MONAT=${PRE_DP}.Regen_Monat
