--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -1,4 +1,4 @@
-### Settings V1.0.1 -----------------------------------------------------------
+### Settings V1.1.0 -----------------------------------------------------------
  #Debuging einschalten [true/false] / default false / Ausgabe der Messwerte
   debug=false
  
@@ -13,7 +13,7 @@
 
  #Name/ID der Wetterstation
   WS_ID=ZuHause
- 
+
  #wo sollen die Datenobjekte abgelegt werden
   PRE_DP=javascript.0.Wetterstation
 
@@ -40,6 +40,9 @@
   DP_SONNE=${PRE_DP}.Sonnenstrahlung
   DP_UV_INDEX=${PRE_DP}.UV_Index
   DP_ZEITSTEMPEL=${PRE_DP}.Zeitstempel
+  DP_WETTER_TREND=${PRE_DP}.Wetter_Trend
+  DP_WETTER_AKTUELL=${PRE_DP}.Wetter_aktuell
+  DP_DRUCK_TENDENZ=${PRE_DP}.Druck_Tendenz
   DP_KOMFEHLER=${PRE_DP}._Kommunikationsfehler
 
 ###  Ende Usereinstellungen  
