--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -44,6 +44,7 @@
   DP_WETTER_AKTUELL=${PRE_DP}.Wetter_aktuell
   DP_DRUCK_TENDENZ=${PRE_DP}.Druck_Tendenz
   DP_KOMFEHLER=${PRE_DP}._Kommunikationsfehler
+  DP_WETTERDATA=${PRE_DP}.tempData.Wetterdaten
 
 ###  Ende Usereinstellungen  
 ###EoF
