--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -1,4 +1,4 @@
-### Settings V1.1.0 -----------------------------------------------------------
+### Settings V1.2.0 -----------------------------------------------------------
  #Debuging einschalten [true/false] / default false / Ausgabe der Messwerte
   debug=false
  
@@ -45,6 +45,16 @@
   DP_DRUCK_TENDENZ=${PRE_DP}.Druck_Tendenz
   DP_KOMFEHLER=${PRE_DP}._Kommunikationsfehler
   DP_WETTERDATA=${PRE_DP}.tempData.Wetterdaten
+  DP_SONNENSCHEIN_SAVE=${PRE_DP}.tempData.Sonnenschein  
+  DP_FW_UPGRADE=${PRE_DP}.Info.FW_Upgrade
+  DP_SONNENSCHEIN_TAG=${PRE_DP}.Info.Sonnenschein_Tag
+  DP_SONNENSCHEIN_WOCHE=${PRE_DP}.Info.Sonnenschein_Woche
+  DP_SONNENSCHEIN_MONAT=${PRE_DP}.Info.Sonnenschein_Monat
+  DP_SONNENSCHEIN_JAHR=${PRE_DP}.Info.Sonnenschein_Jahr
+  DP_SONNENSCHEIN_TAG_TEXT=${PRE_DP}.Info.Sonnenschein_Tag_Text
+  DP_SONNENSCHEIN_WOCHE_TEXT=${PRE_DP}.Info.Sonnenschein_Woche_Text
+  DP_SONNENSCHEIN_MONAT_TEXT=${PRE_DP}.Info.Sonnenschein_Monat_Text
+  DP_SONNENSCHEIN_JAHR_TEXT=${PRE_DP}.Info.Sonnenschein_Jahr_Text
 
 ###  Ende Usereinstellungen  
 ###EoF
