--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -39,6 +39,7 @@
   DP_REGEN_JAHR_KUM=${PRE_DP}.Regen_Jahr_kumuliert
   DP_SONNE=${PRE_DP}.Sonnenstrahlung
   DP_UV_INDEX=${PRE_DP}.UV_Index
+  DP_UV_BELASTUNG=${PRE_DP}.UV_Belastung
   DP_ZEITSTEMPEL=${PRE_DP}.Zeitstempel
   DP_WETTER_TREND=${PRE_DP}.Wetter_Trend
   DP_WETTER_AKTUELL=${PRE_DP}.Wetter_aktuell
