--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -56,6 +56,9 @@
   DP_SONNENSCHEIN_WOCHE_TEXT=${PRE_DP}.Info.Sonnenschein_Woche_Text
   DP_SONNENSCHEIN_MONAT_TEXT=${PRE_DP}.Info.Sonnenschein_Monat_Text
   DP_SONNENSCHEIN_JAHR_TEXT=${PRE_DP}.Info.Sonnenschein_Jahr_Text
+  DP_SONNENSCHEIN_VORJAHR=${PRE_DP}.Info.Sonnenschein_VorJahr
+  DP_REGENMENGE_VORJAHR=${PRE_DP}.Info.Regenmenge_VorJahr
+
 
 ###  Ende Usereinstellungen  
 ###EoF
