--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -1,4 +1,4 @@
-### Settings V1.2.0 -----------------------------------------------------------
+### Settings V1.2.1 -----------------------------------------------------------
  #Debuging einschalten [true/false] / default false / Ausgabe der Messwerte
   debug=false
  
@@ -16,6 +16,16 @@
 
  #wo sollen die Datenobjekte abgelegt werden
   PRE_DP=javascript.0.Wetterstation
+
+ #Text-Format für Datenpunkte "Sonnenschein_[Tag|Woche|Monat|Jahr]_Text"
+ # h = Stunden 0...n ein- oder mehrstellig / mm = Minuten zweistellig / ss = Sekunden zweistellig
+ # Beispiel: 68 Stunden, 12 Minuten und 5 Sekunden
+ # Auswahl                            | Ausgabe im Datenpunkt
+ # ----------------------------------------------------------------------------
+ # [0] = h Std. mm Min. ss Sek.       | 68 Std. 12 Min. 05 Sek.
+ # [1] = h:mm                         | 68:12
+
+  SONNENSCHEIN_TXTFORMAT=0
 
 
 ###  Ende Usereinstellungen  
