--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -18,13 +18,18 @@
   PRE_DP=javascript.0.Wetterstation
 
  #Text-Format für Datenpunkte "Sonnenschein_[Tag|Woche|Monat|Jahr]_Text"
- # h = Stunden 0...n ein- oder mehrstellig / mm = Minuten zweistellig / ss = Sekunden zweistellig
+ # zweistellig wird ggf. mit einer führenden "0" aufgefüllt
+ # d = Tag(e) 0...n ein- und mehrstellig / h = Stunden 0...n ein- oder mehrstellig
+ # hh = Stunden zweistellig / mm = Minuten zweistellig / ss = Sekunden zweistellig
+ #
  # Beispiel: 68 Stunden, 12 Minuten und 5 Sekunden
+ #
  # Auswahl                            | Ausgabe im Datenpunkt
  # ----------------------------------------------------------------------------
  # [0] = h Std. mm Min. ss Sek.       | 68 Std. 12 Min. 05 Sek.
  # [1] = h:mm                         | 68:12
-
+ # [2] = d Tag/e h Std.               | 2 Tage 20 Std.
+  
   SONNENSCHEIN_TXTFORMAT=0
 
 
