--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -1,4 +1,4 @@
-### Settings V1.2.1 -----------------------------------------------------------
+### Settings V1.3.0 -----------------------------------------------------------
  #Debuging einschalten [true/false] / default false / Ausgabe der Messwerte
   debug=false
  
@@ -17,6 +17,13 @@
  #wo sollen die Datenobjekte abgelegt werden
   PRE_DP=javascript.0.Wetterstation
 
+ #letztes Regenereignis als [DATUM], [UNIX]-Timestamp oder [DIFF]erenz ("vor xx Tagen")
+ # DATUM = 28.04.2020 13:12
+ # UNIX  = 1588074964
+ # DIFF  = gerade eben / vor einer Stunde / vor 23 Stunden / vor einem Tag / vor 12 Tagen
+
+  LAST_RAIN=DIFF
+ 
  #Text-Format für Datenpunkte "Sonnenschein_[Tag|Woche|Monat|Jahr]_Text"
  # zweistellig wird ggf. mit einer führenden "0" aufgefüllt
  # d = Tag(e) 0...n ein- und mehrstellig / h = Stunden 0...n ein- oder mehrstellig
