--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -36,8 +36,9 @@
  # [0] = h Std. mm Min. ss Sek.       | 68 Std. 12 Min. 05 Sek.
  # [1] = h:mm                         | 68:12
  # [2] = d Tag/e h Std.               | 2 Tage 20 Std.
+ # [3] = d Tag/e, h Std, m Min        | 2 Tage, 20 Std, 12 Min (Anzeige Tage erst bei >0)
   
-  SONNENSCHEIN_TXTFORMAT=0
+  SONNENSCHEIN_TXTFORMAT=3
 
 
 ###  Ende Usereinstellungen  
