--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -6,7 +6,7 @@
   IPP=192.168.1.3:8087               
 
  #Port der Wetterstation
-  WS_PORT=80
+  WS_PORT=1080
 
  #Pollintervall der Wetterstation in Sekunden (minimal 16 Sekunden)
   WS_POLL=60
@@ -27,7 +27,7 @@
  #Text-Format für Datenpunkte "Sonnenschein_[Tag|Woche|Monat|Jahr]_Text"
  # zweistellig wird ggf. mit einer führenden "0" aufgefüllt
  # d = Tag(e) 0...n ein- und mehrstellig / h = Stunden 0...n ein- oder mehrstellig
- # hh = Stunden zweistellig / mm = Minuten zweistellig / ss = Sekunden zweistellig
+ # hh = Stunden zweistellig (00...23) / mm = Minuten zweistellig (00...59) / ss = Sekunden zweistellig (00...59)
  #
  # Beispiel: 68 Stunden, 12 Minuten und 5 Sekunden
  #
