--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -1,5 +1,5 @@
-### Settings V1.3.1 -----------------------------------------------------------
- #Debuging einschalten [true/false] / default false / Ausgabe der Messwerte
+### Settings V1.4.0 -----------------------------------------------------------
+ #Debuging einschalten [true/false] / default: false / Ausgabe der Messwerte
   debug=false
  
  #ioBroker-IP und Port der Simple-Restful-API [xxx.xxx.xxx.xxx:xxxxx]
@@ -39,6 +39,51 @@
  # [3] = d Tag/e, h Std, m Min        | 2 Tage, 20 Std, 2 Min (Anzeige Tage erst bei >0)
   
   SONNENSCHEIN_TXTFORMAT=3
+
+
+
+ #############################################################################################
+ ###    openSenseMap - Einstellungen (nur nötig falls openSenseMap benutzt werden soll)    ###
+ ###                                                                                       ###
+ ###    Für die Registrierung muss "openSenseMap" auf "false" eingestellt sein!            ###
+ ###    Erst wenn auch Sensoren angelegt wurden, darf auf "true" umgestellt werden!        ###
+ #############################################################################################
+  
+  #openSenseMap aktivieren [true/false] / default: false
+   openSenseMap=false
+
+  #SenseBox-User
+   senseBox_USER=
+
+  #SenseBox-Password
+   senseBox_PWD=
+
+  #ID der senseBox (24-stellig)
+   senseBox_ID=
+
+  #Security-Token der Box
+   BOX_TOKEN=
+             
+
+  ### Die restlichen Einstellungen für OpenSenseMap werden vom System generiert/benutzt ######
+  ### Änderungen sind hier nicht nötig, außer man weiß ganz genau was man tut! ###############
+
+  #Sensor-IDs (wird automatisch anhand der Sensoren erzeugt)
+   SENSEBOX_IDSENSOR=()
+
+  #Sensor-Bezeichnung (Reihenfolge muss zur Sensor-ID identisch sein!)
+   SENSEBOX_IDNAME=("Temperatur" "Luftfeuchte" "Luftdruck relativ" "Luftdruck absolut" "Taupunkt" "Chillfaktor" "Sonnenstrahlung" "Windgeschwindigkeit" "Windrichtung" "UV-Index" "Regenrate")
+
+  #Messwertezuordnung (Reihenfolge muss zur Sensor-ID identisch sein!)
+   SENSEBOX_IDMESSWERT=(1 5 10 9 2 3 16 6 8 17 11)
+
+  #Sensorendefinitionen
+   ICONS=(osem-thermometer osem-humidity osem-barometer osem-barometer osem-thermometer osem-thermometer osem-brightness osem-particulate-matter osem-particulate-matter osem-brightness osem-umbrella)
+   UNITS=('°C' '%H' 'hPa' 'hPa' '°C' '°C' 'W/m²' 'km/h' '°' 'Index' 'mm/h')
+
+ #############################################################################################
+ ###    openSenseMap - Ende der Einstellungen    #############################################
+ #############################################################################################
 
 
 ###  Ende Usereinstellungen  
