--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -1,9 +1,16 @@
-### Settings V1.4.0 -----------------------------------------------------------
+### Settings V1.5.0 -----------------------------------------------------------
  #Debuging einschalten [true/false] / default: false / Ausgabe der Messwerte
   debug=false
  
  #ioBroker-IP und Port der Simple-Restful-API [xxx.xxx.xxx.xxx:xxxxx]
   IPP=192.168.1.3:8087               
+
+ #Protokoll (HTTP oder HTTPS) / default: HTTP
+  WEB=HTTP
+
+ #User-Authentifizierung falls benutzt; sonst leer lassen
+  AUTH_USER=
+  AUTH_PASS=
 
  #Port der Wetterstation
   WS_PORT=1080
@@ -54,7 +61,7 @@
 
   #SenseBox-User
    senseBox_USER=
-   
+
   #SenseBox-Password
    senseBox_PWD=
 
@@ -63,6 +70,7 @@
 
   #Security-Token der Box
    BOX_TOKEN=
+
 
 
   ### Die restlichen Einstellungen für OpenSenseMap werden vom System generiert/benutzt ######
