--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -1,13 +1,22 @@
-### Settings V1.6.0 -----------------------------------------------------------
+### Settings V2.0.0 -----------------------------------------------------------
  #Debuging einschalten [true/false] / default: false / Ausgabe der Messwerte
   debug=false
- 
- #ioBroker-IP und Port der Simple-Restful-API [xxx.xxx.xxx.xxx:xxxxx]
-  IPP=192.168.1.3:8087               
+
+ #ioBroker-IP und Port der Simple-Restful-API [xxx.xxx.xxx.xxx:xxxxx] 
+  IPP=192.168.1.3:8087
+
+ #Protokoll der Wetterstation [1/2] / 1=Wunderground ; 2=Ecowitt / default: 1
+  WS_PROTOKOLL=1
+
+ #Anzahl der vorhandenen DP50 Sensoren / default: 0  
+  ANZAHL_DP50=0
+
+ #HTTP Anzahl der vorhandenen DP100 Sensoren / default: 0
+  ANZAHL_DP100=0
 
  #Protokoll (HTTP oder HTTPS) / default: HTTP
   WEB=HTTP
-
+ 
  #User-Authentifizierung falls benutzt; sonst leer lassen
   AUTH_USER=
   AUTH_PASS=
