--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -1,11 +1,11 @@
-### Settings V2.0.0 -----------------------------------------------------------
+### Settings V2.1.0 -----------------------------------------------------------
  #Debuging einschalten [true/false] / default: false / Ausgabe der Messwerte
   debug=false
 
  #ioBroker-IP und Port der Simple-Restful-API [xxx.xxx.xxx.xxx:xxxxx] 
   IPP=192.168.1.3:8087
 
- #Protokoll der Wetterstation [1/2] / 1=Wunderground ; 2=Ecowitt / default: 1
+ #Protokoll der Wetterstation [1/2/9] / 1=Wunderground ; 2=Ecowitt ; 9=Sainlogic Profi / default: 1
   WS_PROTOKOLL=1
 
  #Anzahl der vorhandenen DP50 Sensoren / default: 0  
