--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -1,4 +1,4 @@
-### Settings V2.1.0 -----------------------------------------------------------
+### Settings V2.2.0 -----------------------------------------------------------
  #Debuging einschalten [true/false] / default: false / Ausgabe der Messwerte
   debug=false
 
@@ -70,7 +70,7 @@
 
   #SenseBox-User
    senseBox_USER=
-
+   
   #SenseBox-Password
    senseBox_PWD=
 
@@ -87,9 +87,9 @@
 
   #Sensor-IDs (wird automatisch anhand der Sensoren erzeugt)
    SENSEBOX_IDSENSOR=()
-
+   
   #Sensor-Bezeichnung (Reihenfolge muss zur Sensor-ID identisch sein!)
-   SENSEBOX_IDNAME=("Temperatur" "Luftfeuchte" "Luftdruck relativ" "Luftdruck absolut" "Taupunkt" "Chillfaktor" "Sonnenstrahlung" "Windgeschwindigkeit" "Windrichtung" "UV-Index" "Regenrate")
+   SENSEBOX_IDNAME=("Temperatur" "Luftfeuchte" "Luftdruck relativ" "Luftdruck absolut" "Taupunkt" "gefühlte Temperatur" "Sonnenstrahlung" "Windgeschwindigkeit" "Windrichtung" "UV-Index" "Regenrate")
 
   #Messwertezuordnung (Reihenfolge muss zur Sensor-ID identisch sein!)
    SENSEBOX_IDMESSWERT=(1 5 10 9 2 3 16 6 8 17 11)
