--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -1,4 +1,4 @@
-### Settings V2.2.0 -----------------------------------------------------------
+### Settings V2.3.0 -----------------------------------------------------------
  #Debuging einschalten [true/false] / default: false / Ausgabe der Messwerte
   debug=false
 
@@ -8,10 +8,9 @@
  #Protokoll der Wetterstation [1/2/9] / 1=Wunderground ; 2=Ecowitt ; 9=Sainlogic Profi / default: 1
   WS_PROTOKOLL=1
 
- #Anzahl der vorhandenen DP50 Sensoren / default: 0  
+ #Anzahl der vorhandenen Zusatzsensoren / default: 0
   ANZAHL_DP50=0
-
- #HTTP Anzahl der vorhandenen DP100 Sensoren / default: 0
+  ANZAHL_DP60=0
   ANZAHL_DP100=0
 
  #Protokoll (HTTP oder HTTPS) / default: HTTP
@@ -32,6 +31,14 @@
 
  #wo sollen die Datenobjekte abgelegt werden
   PRE_DP=javascript.0.Wetterstation
+
+ #InfluxDB-Konfiguration / ohne InfluxDB alles leer lassen
+  #IP und Port der API [xxx.xxx.xxx.xxx:xxxxx]
+   INFLUX_API=
+  #Name, User und Passwort der InfluxDB-Datenbank
+   INFLUX_DB=
+   INFLUX_USER=
+   INFLUX_PASSWORD=
 
  #letztes Regenereignis als [DATUM], [UNIX]-Timestamp oder [DIFF]erenz ("vor xx Tagen")
  # DATUM = 28.04.2020 13:12
@@ -70,7 +77,7 @@
 
   #SenseBox-User
    senseBox_USER=
-   
+
   #SenseBox-Password
    senseBox_PWD=
 
