--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -1,4 +1,4 @@
-### Settings V2.3.0 -----------------------------------------------------------
+### Settings V2.4.0 -----------------------------------------------------------
  #Debuging einschalten [true/false] / default: false / Ausgabe der Messwerte
   debug=false
 
@@ -12,6 +12,7 @@
   ANZAHL_DP50=0
   ANZAHL_DP60=0
   ANZAHL_DP100=0
+  ANZAHL_DP200=0
 
  #Protokoll (HTTP oder HTTPS) / default: HTTP
   WEB=HTTP
@@ -94,7 +95,7 @@
 
   #Sensor-IDs (wird automatisch anhand der Sensoren erzeugt)
    SENSEBOX_IDSENSOR=()
-   
+
   #Sensor-Bezeichnung (Reihenfolge muss zur Sensor-ID identisch sein!)
    SENSEBOX_IDNAME=("Temperatur" "Luftfeuchte" "Luftdruck relativ" "Luftdruck absolut" "Taupunkt" "gefühlte Temperatur" "Sonnenstrahlung" "Windgeschwindigkeit" "Windrichtung" "UV-Index" "Regenrate")
 
