--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -1,4 +1,4 @@
-### Settings V2.4.0 -----------------------------------------------------------
+### Settings V2.5.0 -----------------------------------------------------------
  #Debuging einschalten [true/false] / default: false / Ausgabe der Messwerte
   debug=false
 
@@ -11,6 +11,7 @@
  #Anzahl der vorhandenen Zusatzsensoren / default: 0
   ANZAHL_DP50=0
   ANZAHL_DP60=0
+  ANZAHL_DP70=0
   ANZAHL_DP100=0
   ANZAHL_DP200=0
 
