--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -1,4 +1,4 @@
-### Settings V2.6.0 -----------------------------------------------------------
+### Settings V2.7.0 -----------------------------------------------------------
  #Debuging einschalten [true/false] / default: false / Ausgabe der Messwerte
   debug=false
 
@@ -14,6 +14,7 @@
   ANZAHL_DP70=0
   ANZAHL_DP100=0
   ANZAHL_DP200=0
+  ANZAHL_DP250=0
 
  #Protokoll (HTTP oder HTTPS) / default: HTTP
   WEB=HTTP
