--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -1,4 +1,4 @@
-### Settings V2.7.0 -----------------------------------------------------------
+### Settings V2.8.0 -----------------------------------------------------------
  #Debuging einschalten [true/false] / default: false / Ausgabe der Messwerte
   debug=false
 
@@ -65,6 +65,12 @@
  # [3] = d Tag/e, h Std, m Min        | 2 Tage, 20 Std, 2 Min (Anzeige Tage erst bei >0)
   
   SONNENSCHEIN_TXTFORMAT=3
+ 
+
+  #Daten an Wetter.com senden (leer lassen falls nicht gewünscht)?
+   WETTERCOM_ID=
+   WETTERCOM_PW=
+ 
 
 
 
