--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -1,7 +1,10 @@
-### Settings V2.10.0 -----------------------------------------------------------
+### Settings V2.11.0 -----------------------------------------------------------
  #Debuging einschalten [true/false] / default: false / Ausgabe der Messwerte
   debug=false
-
+ 
+ #Verhalten bei Kommunikationsfehler [true/false] / default: false / Soll der Datenpunkt automatisch resettet werden?
+  RESET_KOMFEHLER=false
+ 
  #Logging einschalten [true/false] / default: false / schreibt die Datenstrings der Station in eine Datei
   logging=false
 
@@ -77,6 +80,7 @@
    WETTERCOM_ID=
    WETTERCOM_PW=
  
+
 
 
  #############################################################################################
